--- a/src/style/main.css
+++ b/src/style/main.css
@@ -148,10 +148,33 @@ main {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  /* padding: 10px; */
+  max-height: 300px;
+  overflow-y: scroll;
   border-radius: 15px;
+} /* Estiliza a largura e a altura da barra de rolagem */
+::-webkit-scrollbar {
+  width: 5px; /* Largura da barra de rolagem vertical */
+  height: 10px; /* Altura da barra de rolagem horizontal */
 }
-.li__cart__empty{
+
+/* Estiliza o fundo da barra de rolagem */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Cor de fundo da trilha */
+  border-radius: 10px;
+}
+
+/* Estiliza o "puxador" da barra de rolagem */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Cor da barra */
+  border-radius: 10px;
+}
+
+/* Quando o usuário passa o mouse na barra */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.li__cart__empty {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,7 +184,8 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 5px;
+  /* padding-bottom: 5px; */
+  padding: 5px 10px;
   border-bottom: 1px solid var(--rose-300);
 }
 /* .li__item__cart:last-child {
@@ -208,10 +232,10 @@ main {
   font-weight: 400;
   font-size: 14px;
 }
-.span__carbon__neutral{
+.span__carbon__neutral {
   font-weight: 600;
 }
-.button__checkout{
+.button__checkout {
   width: 100%;
   padding: 15px;
   border-radius: 20px;
@@ -221,6 +245,6 @@ main {
   cursor: pointer;
   transition: all 0.5s ease-in-out;
 }
-.button__checkout:hover{
+.button__checkout:hover {
   opacity: 0.8;
 }
