--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap");
 body {
   width: 100%;
   min-height: 100vh;
   background-color: var(--rose-100);
+  overflow-x: hidden;
+  font-family: "Red Hat Text", serif;
 }
 main {
   width: 100%;
@@ -9,9 +12,8 @@ main {
   display: flex;
   padding: 3rem 5rem;
   justify-content: space-around;
-
 }
-#menu{
+#menu {
   width: 70%;
   padding-top: 20px;
   display: flex;
@@ -71,6 +73,7 @@ main {
   left: 50%;
   transform: translateX(-50%);
   width: 50%;
+  min-width: 140px;
   padding: 7px;
   display: flex;
   border: 1px solid var(--rose-300);
