--- a/src/style/Responsiveness.css
+++ b/src/style/Responsiveness.css
@@ -6,15 +6,14 @@
     min-width: 300px;
   }
 }
-
-@media (max-width: 757px) {
+@media (max-width: 990px) {
   #main {
     padding: 1rem 1rem;
     flex-direction: column;
     align-items: center;
     gap: 20px;
   }
-  #menu {
+   #menu {
     width: 100% !important;
   }
   #cart_container {
@@ -23,10 +22,18 @@
     justify-content: center;
   }
   .cart {
-    width: 60% !important;
+    width: 50% !important;
     min-width: 300px;
   }
   .cart__list {
     max-height: 200px !important;
   }
+}
+
+@media (max-width: 771px) {
+
+  .cart {
+    width: 70% !important;
+  }
+
 }
