--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,5 @@
 @import url(variables.css);
 @import url(Responsiveness.css);
 @import url(reset.css);
-@import url(_typography.css);
+@import url(typography.css);
 @import url(main.css);
